integrated CLI
